--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@
 }
 
 .side-bar-container {
+    background-color: white;
+    width: 60%;
+    border: 1px solid black;
+    position: absolute;
+    right: 0;
     list-style-type: none;
     display: none;
     flex-direction: column;
@@ -96,8 +101,13 @@
 .side-items {
     padding: 5px;
     margin: 2px;
-    width: 20%;
+    width: 70%;
     text-align: center;
+    text-wrap: nowrap;
+    display: block;
+}
+.side-items:hover {
+    background-color: rgb(224, 224, 224);
 }
 .side-items a {
     text-decoration: none;
