--- a/style.css
+++ b/style.css
@@ -39,16 +39,7 @@
 .small-logo a img {
     width: 100%;
 }
-.logo-text {
-    display: none;
-}
-.logo-text a {
-    text-decoration: none;
-}
-.logo-text a h1 {
-    color:  black;
-    
-}
+
 .about-container, .gallery-container {
     position: relative;
 }
@@ -88,15 +79,19 @@
 .side-bar-container {
     background-color: white;
     width: 60%;
-    border: 1px solid black;
-    position: absolute;
+    position: fixed;
+    top: 0;
     right: 0;
     list-style-type: none;
     display: none;
     flex-direction: column;
     align-items: center;
     height: 100%;
-    z-index: 999;
+    z-index: 2;
+    overflow: auto;
+    margin-top: 0;
+    padding-top: 10%;
+
 }
 .side-items {
     padding: 5px;
@@ -120,6 +115,9 @@
 .menu-button, .close-button {
     cursor: pointer;
     display: none;
+    z-index: 3;
+    position: fixed;
+    right: 3.4%;
 }
 
 @media screen and (max-width: 830px ) {
@@ -138,12 +136,6 @@
     .logo-item {
         display: none;
     }
-    .logo-text {
-        display: block;
-    }
-    .small-logo {
-        margin-right: 0;
-    }
 }
 @media screen and (min-width: 830px) {
     .menu-button, .close-button, .side-bar-container {
@@ -158,15 +150,33 @@
     width: 95%;
     margin: 0 auto 0 auto;
 }
+.welmsg {
+    text-align: center;
+}
+.welmsg hr {
+    width: 9%;
+    color: rgb(0, 219, 0);
+}
+.welmsg h1, .welmsg h3 {
+    margin: 0;
+}
 
 /* slide show code */
 
 .slideshow-container {
     position: relative;
-    height: 88vh;
+    height: 91vh;
     overflow: hidden;
+    
+
   }
-  
+.slideshow-container h1 {
+    text-align: center;
+}
+.slideshow-container hr {
+    width: 50%;
+    color: rgb(0, 255, 0);
+}
   .simage {
     height: 100%;
     overflow: hidden;
@@ -213,3 +223,29 @@
     transition: background-color 1s;
     background-color: rgba(0, 0, 0, 0.7);
   }
+
+
+  /* Welcome message after the phtoes slide */
+  .home-body {
+    width: 90%;
+    margin: auto;
+  }
+  .stboxes {
+    width: 50%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+  }
+.boxes {
+    border: 3px solid rgb(81, 255, 0);
+    border-radius: 8px;
+    background-color: rgb(57, 255, 57);
+}
+.boxes h2, .boxes h5 {
+    margin: 0;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    
+}
