--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@
     background-color: rgb(0, 165, 0);
     font-size: 1em;
 }
+.donate-button {
+    padding-top: 0.3em;
+}
 .items button:hover {
     background-color: green;
 }
@@ -90,12 +93,12 @@
     z-index: 2;
     overflow: auto;
     margin-top: 0;
-    padding-top: 10%;
+    padding-top: 5em;
 
 }
 .side-items {
     padding: 5px;
-    margin: 2px;
+    margin: 0.3em;
     width: 70%;
     text-align: center;
     text-wrap: nowrap;
@@ -116,32 +119,10 @@
     cursor: pointer;
     display: none;
     z-index: 3;
-    position: fixed;
+    position: absolute;
     right: 3.4%;
 }
 
-@media screen and (max-width: 830px ) {
-    .nav-items {
-        justify-content: space-between;
-    }
-    .menu-button {
-        display: block;
-    }
-    .max-items {
-        display: none;
-    }
-    .small-logo {
-        display: block;
-    }
-    .logo-item {
-        display: none;
-    }
-}
-@media screen and (min-width: 830px) {
-    .menu-button, .close-button, .side-bar-container {
-        display: none !important;
-    }
-}
 
 
 /* -------------------------------------------------------------------*/
@@ -154,8 +135,9 @@
     text-align: center;
 }
 .welmsg hr {
-    width: 9%;
+    width: 100px;
     color: rgb(0, 219, 0);
+    border: 2px solid rgb(0, 219, 0);
 }
 .welmsg h1, .welmsg h3 {
     margin: 0;
@@ -225,27 +207,115 @@
   }
 
 
-  /* Welcome message after the phtoes slide */
-  .home-body {
-    width: 90%;
-    margin: auto;
-  }
-  .stboxes {
-    width: 50%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+/* the part below the slides */
 
-  }
-.boxes {
-    border: 3px solid rgb(81, 255, 0);
-    border-radius: 8px;
-    background-color: rgb(57, 255, 57);
+
+.discover {
+    width: 80%;
+    margin: auto;
 }
-.boxes h2, .boxes h5 {
+.discover hr {
+    color: rgb(0, 199, 0);
+    border: 2px solid rgb(0, 199, 0);
+}
+
+/* the code for the teachers and students images */
+
+
+
+.image-container {
+
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 3.5em;
+}
+.sub-container {
+    width: 24%;
+    margin: 5px;
+}
+.image-teme {
+    width: 100%;
+    position: relative;
+
+}
+.image-teme img {
+    width: 100%;
+}
+.image-teme h4 {
+    position: absolute;
+    bottom: 5px;
+    left: 15px;
+    color: white;
     margin: 0;
+}
+
+/* news and recent events */
+
+.news {
+    border: 1px solid black;
+    margin-top: 2em;
+}
+.news>h1, .news>h5 {
     text-align: center;
-    color: rgb(0, 0, 0);
+
+}
+.news>h1 {
+    margin-bottom: 0;
+}
+.news>h5 {
+    margin-top: 0;
+}
+
+.news-container {
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 2em;
+}
+.news-container .box {
+    width: 350px;
+    height: 400px;
+    border: 1px solid black;
+    background-color: rgba(0, 224, 0, 0.945);
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 830px ) {
+    .nav-items {
+        justify-content: space-between;
+    }
+    .menu-button {
+        display: block;
+    }
+    .max-items {
+        display: none;
+    }
+    .small-logo {
+        display: block;
+    }
+    .logo-item {
+        display: none;
+    }
+    .sub-container {
+        width: 48%;
     
+    }
+    
+}
+@media screen and (min-width: 830px) {
+    .menu-button, .close-button, .side-bar-container {
+        display: none !important;
+    }
+}
+@media screen and (max-width: 667px) {
+    .image-container {
+        flex-direction: column;
+
+    }
+    .sub-container {
+        margin: 5px auto 5px auto;
+        width: 80%;
+    }
 }
