--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 * {
     box-sizing: border-box;
+    padding: 0;
 }
-
+body {
+    margin: 0;
+    padding: 0;
+}
 /* code for the navigation bar */
 
 .nav-container {
@@ -258,14 +262,36 @@
     position: absolute;
     bottom: 5px;
     left: 15px;
-    color: white;
+    color: #ffffff;
     margin: 0;
 }
+
+/* number of students part */
+
+.ncontainer {
+    margin: 3em;
+}
+.nlist h2, .nlist h4, .nlist svg {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.nstudents , .nteachers {
+    text-align: center;
+    display: inline-block;
+    margin: 0 20px 0;
+    
+}
+.nscontainer {
+    display: flex;
+    justify-content:center;
+
+}
+
 
 /* news and recent events */
 
 .news {
-    margin-top: 2em;
+    margin-top: 5em;
 }
 .news>h1, .news>h5 {
     text-align: center;
@@ -287,12 +313,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 2em;
+    margin-bottom: 10em;
+
 }
 .news-container .box {
     width: 32%;
     border: 1px solid black;
     border-radius: 10px;
     margin: 0 auto 5px auto;
+    overflow: hidden;
 }
 .box img {
     width: 100%;
@@ -302,10 +331,10 @@
     left: 10px;
 }
 .box h1 {
-    margin: 4px;
+    margin: 6px;
 }
 .box p {
-    margin: 0.5px;
+    margin: 0 0 0 10px;
 }
 .box h5 {
     margin: 0;
@@ -314,6 +343,45 @@
     left: 10px;
     text-decoration:underline;
 }
+
+/* footer */
+
+footer {
+    box-shadow: 90 90 90 3 ;
+    width: 100%;
+    margin: 0;
+    background-color: rgb(160, 160, 160, 0.2);
+}
+.ffooter {
+    margin: 3em;
+
+    text-align: center;
+}
+.ffooter h2 {
+    color: rgb(0, 0, 0);
+}
+.ffooter button {
+    padding: 1em 3em;
+    background-color: rgb(0, 233, 0);
+    font-size: 1em;
+    font-weight: bold;
+    border: none;
+}
+.ffooter button:hover {
+    background-color: rgb(0, 212, 0);
+}
+.fdiv-container {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.fdiv {
+    width: 30%;
+
+}
+
 
 @media screen and (max-width: 830px ) {
     .nav-items {
@@ -335,7 +403,7 @@
         width: 47%;
     }
     .news-container .box {
-        width: 47%;
+        width: 90%;
     }
     .dicontainer {
         display: block;
@@ -366,8 +434,7 @@
 
     }
     .news-container .box {
-        width: 100%;
+        width: 90%;
         margin: 0 auto 5px auto;
     }
 }
-
