--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .nav-container {
     width: 97%;
-    margin: 0 auto 50px auto;
+    margin: 10px auto 50px auto;
 }
 .nav-items {
     list-style-type: none;
@@ -36,6 +36,7 @@ body {
     width: 12em;
     display: none;
     margin-right: auto;
+    margin-left: 10px;
 }
 .small-logo a {
     width: 100%;
@@ -85,7 +86,7 @@ body {
 
 .side-bar-container {
     background-color: rgb(43, 255, 15);
-    width: 60%;
+    width: 70%;
     position: fixed;
     top: 0;
     right: 0;
@@ -93,7 +94,7 @@ body {
     display: none;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     z-index: 2;
     overflow: auto;
     margin-top: 0;
@@ -101,10 +102,11 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
 
 }
+
 .side-items {
-    padding: 5px;
-    margin: 0.3em;
-    width: 70%;
+    padding: 10px;
+    margin: 0.5em;
+    width: 100%;
     text-align: center;
     text-wrap: nowrap;
     display: block;
@@ -346,40 +348,31 @@ body {
 
 /* footer */
 
-footer {
-    box-shadow: 90 90 90 3 ;
-    width: 100%;
-    margin: 0;
-    background-color: rgb(160, 160, 160, 0.2);
+.the-footer {
+    border: 1px solid black;
 }
-.ffooter {
-    margin: 3em;
-
+.footer-1 {
+    border: 1px solid black;
+    margin: 2em;
     text-align: center;
 }
-.ffooter h2 {
-    color: rgb(0, 0, 0);
-}
-.ffooter button {
-    padding: 1em 3em;
-    background-color: rgb(0, 233, 0);
-    font-size: 1em;
+.footer-1 button {
+    padding: 1.4em 3em;
+    background-color: rgb(0, 230, 0);
+    border: 1px solid black;
     font-weight: bold;
-    border: none;
 }
-.ffooter button:hover {
-    background-color: rgb(0, 212, 0);
-}
-.fdiv-container {
-    width: 90%;
+
+.footer-2 {
+    width: 20%;
     margin: auto;
+    border: 1px solid black;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-.fdiv {
-    width: 30%;
-
+.ff {
+    margin: 2px;
 }
 
 
