--- a/style.css
+++ b/style.css
@@ -244,13 +244,13 @@ body {
 .image-container {
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 3.5em;
 }
 .sub-container {
-    width: 47%;
-    margin: 10px;
+    width: 24%;
+    margin: 2px;
 }
 .image-teme {
     width: 100%;
@@ -260,7 +260,7 @@ body {
 .image-teme img {
     width: 100%;
 }
-.image-teme h2 {
+.image-teme h4 {
     position: absolute;
     bottom: 5px;
     left: 15px;
@@ -270,35 +270,26 @@ body {
 
 /* number of students part */
 
-.no-container {
-    width: 100%;
-}
-.no-container-2 {
-    width: 90%;
-    margin: auto;
+.container-2 {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
 
 }
-.rec {
-    margin: 10px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+.subcont {
+
+    width: 31%;
+    margin: 1%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 0 10px;
+    padding: 0.5em 1.5em;
     display: flex;
     align-items: center;
-    padding: 2em 1.5;
-    width: 30%;
-    border-radius: 5px;
+
 }
-.rec svg {
-    margin-left: 1.5em;
+.subcont-2 {
+    margin: 1em;
 }
-.rec-sub {
-    margin-left:  10px;
-}
-.rec-sub h3, .rec-sub p {
+.subcont h1, .subcont p {
     margin: 0;
-    text-wrap: nowrap;
 }
 
 
@@ -330,7 +321,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 2em;
-    margin-bottom: 10em;
+    margin-bottom: 5em;
 
 }
 .news-container .box {
@@ -364,32 +355,102 @@ body {
 /* footer */
 
 footer {
-    padding-top: 3em;
     margin: 0;
-    background-color: #242331;
-    width: 100%;
-}
-.footer-1 h1, .footer-1 h4 {
+    background-color: rgb(37, 37, 37);
     color: white;
+    padding-top: 1em;
+}
+.footer-1 {
+    
     text-align: center;
+}
+.footer-1 p {
+    margin-top: 0;
 }
 .footer-1 h1 {
     margin-bottom: 0;
+}
 
-}
-.footer-1 h4 {
-    margin-top:0;
-    margin-bottom: 0;
-}
 .footer-2 {
-    width: 85%;
-    margin: 20px auto 0 auto;
+    margin: 0.5em 0 0 0;
+    
+    padding: 1.5em;
+    display: flex;
+    justify-content: space-around;
 }
-.footer-2 p {
+.footer-2-1 {
+    
+    width: 30%;
+
+}
+.footer-2-2 {
+    
+    width: 30%;
     text-align: center;
+}
+.footer-2-3 {
+    
+    width: 30%;
+}
+.email a {
     color: white;
+
+}
+.email:hover a {
+    color: rgb(21, 253, 0);
+
+}
+#map-container {
+    width: 100%;
+}
+#map-container iframe {
+    width: 100%;
 }
 
+/* achievement part */
+
+.achievement {
+    background-color: rgb(100, 228, 100);
+    margin: 0;
+    width: 100%;
+    
+    
+}
+.achievement h1 {
+    text-align: center;
+}
+.achieve-cont {
+    width: 93%;
+    margin: 0 auto 0 auto ;
+}
+.achieve-cont ol {
+    list-style-type: none;
+    padding: 0;
+}
+.achieve-cont ol li {
+    margin: 0 0 10px 0;
+}
+
+/* table part */
+
+.the-table table {
+    width: 90%;
+    text-align: center;
+    vertical-align:middle;
+    border-collapse: collapse;
+    margin: auto;
+    background-color: rgba(56, 56, 56, 0.849);
+    color: rgb(255, 255, 255);
+}
+.the-table h3 {
+    text-align: center;
+}
+.the-table th, .the-table td {
+    padding: 10px;
+}
+.the-table tr:nth-child(odd) {
+    background-color: rgba(58, 58, 58, 0.849);
+  }
 
 
 @media screen and (max-width: 830px ) {
@@ -408,6 +469,9 @@ footer {
     .logo-item {
         display: none;
     }
+    .sub-container {
+        width: 47%;
+    }
     .news-container .box {
         width: 90%;
     }
@@ -425,9 +489,7 @@ footer {
         width: 46%;
 
     }
-    .rec {
-        width: 40%;
-    }
+    
     
 }
 @media screen and (min-width: 830px) {
@@ -458,14 +520,6 @@ footer {
     }
     .subcont {
         width: 100%;
-
-    }
-    .no-container-2 {
-        flex-direction: column;
-        align-items: center;
-    }
-    .rec {
-        width: 70%;
 
     }
 }
