--- a/style.css
+++ b/style.css
@@ -129,7 +129,9 @@ body {
     position: absolute;
     right: 3.4%;
 }
-
+.close-button {
+    position: fixed;
+}
 
 
 /* -------------------------------------------------------------------*/
@@ -363,6 +365,7 @@ footer {
 .footer-1 {
     
     text-align: center;
+    border: 1px solid white;
 }
 .footer-1 p {
     margin-top: 0;
@@ -377,20 +380,23 @@ footer {
     padding: 1.5em;
     display: flex;
     justify-content: space-around;
+    border: 1px solid white;
 }
 .footer-2-1 {
     
     width: 30%;
-
+    border: 1px solid white;
 }
 .footer-2-2 {
     
     width: 30%;
     text-align: center;
+    border: 1px solid white;
 }
 .footer-2-3 {
     
     width: 30%;
+    border: 1px solid white;
 }
 .email a {
     color: white;
@@ -489,6 +495,16 @@ footer {
         width: 46%;
 
     }
+    .footer-2 {
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-2-1, .footer-2-2, .footer-2-3 {
+        width: 93%;
+    }
+    .footer-2-3 {
+        padding-left: 30%;
+    }
     
     
 }
@@ -521,5 +537,9 @@ footer {
     .subcont {
         width: 100%;
 
+    }
+    .footer-2-3 {
+        padding-left: 0;
+        
     }
 }
