--- a/style.css
+++ b/style.css
@@ -80,9 +80,7 @@ body {
 .items button:hover {
     background-color: green;
 }
-.about-container:hover .about-items, .gallery-container:hover .gallery-items {
-    display: block;
-}
+
 
 .side-bar-container {
     background-color: rgb(43, 255, 15);
@@ -429,7 +427,7 @@ footer {
 }
 .ach {
     width: 20%;
-    background-color: rgb(0, 189, 16);
+    background-color: #01b400;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.5) 1px 0 6px;
 }
