--- a/about.css
+++ b/about.css
@@ -13,65 +13,80 @@
     border: 2px solid green;
 }
 
-.misvisval-header {
-    text-align: center;
-}
-.mission, .vision{
 
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 0 6px;
-    width: 70%;
-    margin: 2em auto 2em auto;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: center;
-    
-}
-.values {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 0 6px;
-    width: 70%;
-    margin: 2em auto 2em auto;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: center;
 
-}
-.values-p {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-align: left;
-    width: 80%;
+.about-cont-1 {
+    width: 85%;
     margin: auto;
+    text-align: justify;
+    margin-bottom: 1.5em;
 }
-.values-p div {
-
-    width: 25%;
+.about-cont-1-1 {
+    font-size: 1.4em;
+    font-weight: bold;
 }
 
+.about-cont-2 {
+    width: 85%;
+    margin: 1em auto 2em auto;
+}
+.about-cont-2-1 {
+    text-align: center;
+    margin-bottom: 1.5em;
+}
+.about-cont-2-2 {
+    margin: 1px ;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-cont-2-2-1, .about-cont-2-2-2, .about-cont-2-2-3 {
+    margin: 5px;
+    width: 30%;
+    height: auto;
+    background-color: rgb(0, 218, 11);
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.5) 1px 0 6px;
+    padding: 1em;
 
-.mission p , .vision p , .values-p {
+    
+
+}
+.about-cont-2-2-3 ul {
+    list-style-type: none;
+}
+.about-cont-2-2 h3 {
+    text-decoration: underline;
+    font-weight: bold;
     font-size: large;
 }
-.mis-span {
-    color: rgb(0, 202, 0);
+
+.about-cont-3-1 {
+    text-align: center;
+}
+.about-cont-3-2 {
+    margin: 0 auto 2em auto;
+}
+.about-cont-3-2 iframe {
+    display: block;
+    margin: auto;
 }
 
-@media  screen and (max-width: 988px) {
-    .values-p {
-        flex-direction: column;
-    }
-    .values-p div {
 
-        width: 100%;
-        margin-left: 30%;
+
+
+
+
+
+
+@media screen and (max-width: 820px ) {
+    .about-cont-2-2-1, .about-cont-2-2-2, .about-cont-2-2-3 {
+        width: 45%;
     }
-    
 }
-@media screen and (max-width: 610px) {
-    .values-p div {
-
-        width: 100%;
-        margin-left: 20%;
+@media screen and (max-width: 600px) {
+    .about-cont-2-2-1, .about-cont-2-2-2, .about-cont-2-2-3 {
+        width: 70%;
+        margin: 0.6em auto 0.6em auto;
     }
 }
