--- a/about.css
+++ b/about.css
@@ -75,7 +75,7 @@
     width: 85%;
     overflow: hidden;
     padding-top: 56.25%; /* 16:9 Aspect Ratio */
-    margin: auto;
+    margin: 0 auto 1.5em auto;
   }
   
   .responsive-iframe1 {
@@ -114,6 +114,10 @@
 @media screen and (max-width: 820px ) {
     .about-cont-2-2-1, .about-cont-2-2-2, .about-cont-2-2-3 {
         width: 45%;
+    }
+    .responsive-iframe1 {
+        width: 100%;
+        height: 100%;
     }
 }
 @media screen and (max-width: 600px) {
