--- a/navbar.css
+++ b/navbar.css
@@ -7,7 +7,8 @@
 
 .nav-container {
     width: 97%;
-    margin: 10px auto 50px auto;
+    margin: 10px auto 0 auto;
+    background-color: white;
 }
 .nav-items {
     list-style-type: none;
